# FREIGHT

./: CMakeLists.txt  LICENSE  README.md  compile.sh
code_for_graphs/: CMakeLists.txt  compile.sh
code_for_graphs/app/: balance_configuration.h  configuration.h  evaluator.cpp  parse_parameters.h  streammultisection.cpp
code_for_graphs/lib/: definitions.h
code_for_graphs/lib/data_structure/: buffered_map.h  graph_access.h
code_for_graphs/lib/data_structure/matrix/: online_distance_matrix.h
code_for_graphs/lib/data_structure/priority_queues/: self_sorting_monotonic_vector.h
code_for_graphs/lib/io/: graph_io_stream.cpp  graph_io_stream.h
code_for_graphs/lib/mapping/: hierarchy_operations.cpp  hierarchy_operations.h
code_for_graphs/lib/partition/: partition_config.h
code_for_graphs/lib/partition/onepass_partitioning/: fennel.cpp  fennel.h  fennel_approx_sqrt.cpp  fennel_approx_sqrt.h  floating_block.cpp  floating_block.h  ldg.cpp  ldg.h  vertex_partitioning.cpp  vertex_partitioning.h
code_for_graphs/lib/tools/: graph_extractor.cpp  graph_extractor.h  quality_metrics.cpp  random_functions.cpp  random_functions.h
code_for_hypergraphs/: CMakeLists.txt  compile.sh
code_for_hypergraphs/app/: configuration.h  evaluator.cpp  freight.cpp  parse_parameters.h
code_for_hypergraphs/examples/: README.md  tiny.hgr  tiny.netl
code_for_hypergraphs/lib/: definitions.h
code_for_hypergraphs/lib/data_structure/: buffered_map.h  graph_hierarchy.cpp  graph_hierarchy.h  hypergraph.h  single_adj_list.h
code_for_hypergraphs/lib/data_structure/matrix/: full_matrix.h  online_binary_matrix.h  online_precalc_matrix.h
code_for_hypergraphs/lib/io/: graph_io_stream.cpp  graph_io_stream.h
code_for_hypergraphs/lib/mapping/: fast_construct_mapping.cpp  mapping_algorithms.cpp  mapping_algorithms.h
code_for_hypergraphs/lib/partition/: partition_config.h
code_for_hypergraphs/lib/partition/onepass_partitioning/: fennel.cpp  fennel.h  fennel_approx_sqrt.cpp  fennel_approx_sqrt.h  floating_block.cpp  floating_block.h  ldg.cpp  ldg.h  vertex_partitioning.cpp  vertex_partitioning.h
code_for_hypergraphs/lib/tools/: quality_metrics.cpp  quality_metrics.h  random_functions.h
experimental_results/: README.md
experimental_results/full_plotting/: .plot_con.sh.swp  README.md  clean_plots.sh  plot.sh  plot_con.sh  plot_cut.sh  plot_tim.sh
experimental_results/full_plotting/data_results/: README
experimental_results/full_plotting/data_results/REF_RLX_SV_0.15/: result_balance.txt  resultsGP.txt
experimental_results/full_plotting/data_results/freight_con/: .resultsGP.txt.swp  .results_connectivity.txt.swp  .times.txt.swp  result_balance.txt  resultsGP.txt
experimental_results/full_plotting/data_results/freight_cut/: resultsGP.txt  times.txt
experimental_results/full_plotting/data_results/hashing/: resultsGP.txt
experimental_results/full_plotting/data_results/minmax_l5/: result_balance.txt  times.txt
experimental_results/full_plotting/data_results/patoh_con/: result_balance.txt  results_connectivity.txt  times.txt
experimental_results/full_plotting/data_results/patoh_cut/: result_balance.txt  resultsGP.txt  times.txt
experimental_results/full_plotting/headers/: header.txt  headerGP.txt  header_conn.txt  header_motif_cond.txt  header_motif_time.txt  header_time.txt
experimental_results/full_plotting/meta_scripts/: base.txt  boxplot_plotscript.gnuplot  con_impr_plotscript.gnuplot  cut_impr_plotscript.gnuplot  double_plotscript.gnuplot  impr_plotscript.gnuplot  normalized_plotscript_res.gnuplot  normalized_plotscript_tim.gnuplot  plotscript_res.gnuplot  plotscript_tim.gnuplot  pp_double_plotscript_tim.gnuplot  pp_plotscript_res.gnuplot  pp_plotscript_tim.gnuplot  ratio_plotscript.gnuplot  setup.sh  setup_connectivity.sh  setup_cutnet.sh  setup_time.sh  sgdb.txt  speedup.gnuplot
experimental_results/full_plotting/sqlite/: all_results.txt  create_tables.sql  drop_tables.sql  improvement.sql  list_two_objectives.sql  mean_per_graph.sql  mean_stddev.sql  ordered_absolute_values.sql  ordered_normalized_values.sql  perf_prof.sql  perf_prof_double_obj.sql  ratio.sql  ratio_of_two_objectives_all.sql  speedup.sql  sql_command.sql  sqlite3
experimental_results/full_results/REF_RLX_SV_0.15/: results_connectivity.txt  times.txt
experimental_results/full_results/freight_con/: .result_balance.txt.swp  results_connectivity.txt  times.txt
experimental_results/full_results/freight_cut/: result_balance.txt  results_connectivity.txt
experimental_results/full_results/hashing/: result_balance.txt  results_connectivity.txt  times.txt
experimental_results/full_results/hype/: result_balance.txt  resultsGP.txt  results_connectivity.txt  times.txt
experimental_results/full_results/minmax_l5/: resultsGP.txt  results_connectivity.txt
experimental_results/full_results/minmax_n2p/: result_balance.txt  resultsGP.txt  results_connectivity.txt  times.txt
experimental_results/full_results/patoh_con/: resultsGP.txt
experimental_results/full_results/patoh_cut/: results_connectivity.txt
tools/: hmetis_to_freight.cpp  hmetis_to_freight_stream.cpp
